made bug fixes on api

--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=3001
-DATABASE=mongodb+srv://ataernam:<PASSWORD>@cluster0.xo8p64h.mongodb.net/natours?retryWrites=true&w=majority
-DATABASE_LOCAL=mongodb://localhost:27017/natours
+DATABASE=mongodb+srv://ataernam:<PASSWORD>@cluster0.xo8p64h.mongodb.net/Ennvai?retryWrites=true&w=majority
+DATABASE_LOCAL=mongodb://localhost:27017/Ennvai
 DATABASE_PASSWORD=1881Ata1938
