Modified the models and added the handler factory

--- a/config.env
+++ b/config.env
@@ -3,3 +3,12 @@ PORT=3001
 DATABASE=mongodb+srv://ataernam:<PASSWORD>@cluster0.xo8p64h.mongodb.net/Ennvai?retryWrites=true&w=majority
 DATABASE_LOCAL=mongodb://localhost:27017/Ennvai
 DATABASE_PASSWORD=1881Ata1938
+
+JWT_SECRET=bro-do-you-like-to-suck-huge-black-fucking-cocks-that-gaaaaayy-bruhhh
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN = 90
+
+EMAIL_USERNAME = 12f23e7b456b82
+EMAIL_PASSWORD = 14a2a3b1e97c16
+EMAIL_HOST = sandbox.smtp.mailtrap.io
+EMAIL_PORT = 2525
