--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   },
   "homepage": "https://github.com/AtaErnam/ENNVAI#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.16",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
+    "slugify": "^1.6.6",
+    "validator": "^13.9.0"
   }
 }
